Update profile image and social links in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <div class="overlay"></div>
     <div class="profile">
-      <img src="profile.jpg" alt="Sujan Kumar Roy" />
+      <img src="https://raw.githubusercontent.com/SKR0411/Sujan-Social/Assets/profile.jpg" alt="Sujan Kumar Roy" />
       <h1>Sujan Kumar Roy</h1>
       <p>B.Sc. Mathematics Student | Data Science Enthusiast | App Developer</p>
     </div>
@@ -20,9 +20,9 @@
       <p><strong>Location:</strong> Assam, India</p>
       <p><strong>Interests:</strong> Mathematics, Coding, Data Science</p>
       <div class="links">
-        <a href="#">GitHub</a>
-        <a href="#">LinkedIn</a>
-        <a href="mailto:sujankumarroy@email.com">Email</a>
+        <a href="https://github.com/skr0411">GitHub</a>
+        <a href="https://linkedin.com/in/skr0411">LinkedIn</a>
+        <a href="mailto:sujanroy63836@hmail.com">Email</a>
       </div>
     </div><div class="info-card">
   <h2>Photos</h2>
